--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,12 +1,13 @@
 {
     "manifest_version": 3,
-    "name": "DOM Element Highlighter",
-    "version": "1.2",
-    "description": "Select and label DOM elements.",
+    "name": "Functional Areas Mapper",
+    "version": "1.3",
+    "description": "Identify functional areas for a page, and sub-FA children.",
     "permissions": [
         "activeTab",
         "contextMenus",
-        "storage"
+        "storage",
+        "tabs"
     ],
     "background": {
         "service_worker": "background.js"
@@ -15,6 +16,15 @@
         {
             "matches": ["<all_urls>"],
             "js": ["content.js"]
+        }
+    ],
+        "externally_connectable": {
+        "matches": ["<all_urls>"]
+    },
+    "web_accessible_resources": [
+        {
+            "resources": ["labelForm.html", "labelForm.js"],
+            "matches": ["<all_urls>"]
         }
     ]
 }
